# web_video_server

./: .gitignore
include/web_video_server/: web_video_server.h
src/: h264_streamer.cpp  libav_streamer.cpp  web_video_server.cpp
video_client/: CMakeLists.txt  main.cpp
video_client/third_parties/ffmpeg/arm64-v8a/include/libavutil/: ffversion.h
video_client_pkg/: CMakeLists.txt  package.xml
video_client_pkg/src/: main.cpp
