<?xml version="1.0"?>
<package format="3">
  <name>video_client_pkg</name>
  <version>0.0.1</version>
  <description>ROS 2 package for streaming and saving video frames as JPEG images.</description>
  <maintainer email="Vlozano@ibrobotics.com">Victor Lozano</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libavcodec-dev</build_depend>
  <build_depend>libavformat-dev</build_depend>
  <build_depend>libavutil-dev</build_depend>
  <build_depend>libswscale-dev</build_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
